[FIX] discuss: channel name overflow in channel suggestions
Before this commit:
The channel name used to overflow in the channel suggestion section and also
there was also no limit on the lenght of how long the name of the channel can be.

After this commit:
The name will not overflow in the channnel suggestion section and the user will
also have a certain limit on the length of channel name:

Task id: 3366608

--- a/addons/web/static/src/scss/dropdown.scss
+++ b/addons/web/static/src/scss/dropdown.scss
@@ -9,6 +9,7 @@
     font-size: $font-size-base;
     padding: 5px 0px;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
+    word-wrap: break-word;
 
     .ui-menu-item {
         padding: 0;
